# ChangeLog for net-im/prosody-modules
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  27 Jul 2012; Vadim A. Misbakh-Soloviov <mva@mva.name>
  prosody-modules-9999.ebuild:
  Prosody-modules bump

  23 Jul 2012; Vadim A. Misbakh-Soloviov <mva@mva.name>
  prosody-modules-9999.ebuild:
  Prosody-modules fix

  23 Jul 2012; Vadim A. Misbakh-Soloviov <mva@mva.name>
  prosody-modules-9999.ebuild:
  Prosody-modules bump

  13 Jul 2012; Vadim A. Misbakh-Soloviov <mva@mva.name>
  prosody-modules-9999.ebuild:
  prosody-modules bump

  21 Jun 2012; Vadim A. Misbakh-Soloviov <mva@mva.name>
  prosody-modules-9999.ebuild:
  prosofy-modules bump

*prosody-modules-9999 (23 Apr 2012)

  23 Apr 2012; Vadim A. Misbakh-Soloviov <mva@mva.name> +metadata.xml,
  +prosody-modules-9999.ebuild:
  bump!
