@@ -1,0 +1,22 @@
+|| ( >=dev-lang/lua-5.1 dev-lang/luajit:2 ) dev-libs/geoip || ( >=sys-devel/automake-1.11.1:1.11 >=sys-devel/automake-1.12:1.12 ) >=sys-devel/autoconf-2.68 sys-devel/libtool dev-vcs/git
+|| ( >=dev-lang/lua-5.1 dev-lang/luajit:2 )
+0
+
+
+https://github.com/msva/lua-geoip
+MIT
+Lua GeoIP Library
+
+autotools eutils git-2 libtool multilib multiprocessing toolchain-funcs user
+luajit
+
+
+
+4
+
+install prepare unpack
+
+
+
+
+
