@@ -8,7 +8,7 @@ MIT
 Add-on modules for Prosody IM Server written in Lua.
 
 eutils mercurial multilib toolchain-funcs user
-prosody_modules_addressing prosody_modules_admin_web prosody_modules_archive prosody_modules_archive_muc prosody_modules_auth_dovecot prosody_modules_auth_external prosody_modules_auth_internal_yubikey prosody_modules_auth_joomla prosody_modules_auth_ldap prosody_modules_auth_phpbb3 prosody_modules_auth_sql prosody_modules_auth_wordpress prosody_modules_auto_accept_subscriptions prosody_modules_blocking prosody_modules_c2s_conn_throttle prosody_modules_carbons prosody_modules_checkcerts prosody_modules_client_certs prosody_modules_compat_bind prosody_modules_compat_muc_admin prosody_modules_compat_vcard prosody_modules_component_roundrobin prosody_modules_conformance_restricted prosody_modules_couchdb prosody_modules_data_access prosody_modules_default_bookmarks prosody_modules_default_vcard prosody_modules_discoitems prosody_modules_extdisco prosody_modules_flash_policy prosody_modules_group_bookmarks prosody_modules_host_guard prosody_modules_http_favicon prosody_modules_inotify_reload prosody_modules_ipcheck prosody_modules_json_streams prosody_modules_lastlog prosody_modules_latex prosody_modules_limits prosody_modules_log_auth prosody_modules_mam prosody_modules_mam_adhoc prosody_modules_motd_sequential prosody_modules_muc_intercom prosody_modules_muc_limits prosody_modules_muc_log prosody_modules_muc_log_http prosody_modules_offline_email prosody_modules_onhold prosody_modules_openid prosody_modules_pastebin prosody_modules_post_msg prosody_modules_privacy prosody_modules_pubsub_feeds prosody_modules_readonly prosody_modules_register_json prosody_modules_register_redirect prosody_modules_register_web prosody_modules_reload_modules prosody_modules_remote_roster prosody_modules_roster_command prosody_modules_s2s_blackwhitelist prosody_modules_s2s_idle_timeout prosody_modules_s2s_never_encrypt_blacklist prosody_modules_s2s_reload_newcomponent prosody_modules_saslauth_muc prosody_modules_seclabels prosody_modules_server_contact_info prosody_modules_server_status prosody_modules_service_directories prosody_modules_sift prosody_modules_smacks prosody_modules_sms_clickatell prosody_modules_srvinjection prosody_modules_stanza_counter prosody_modules_storage_mongodb prosody_modules_streamstats prosody_modules_support_contact prosody_modules_swedishchef prosody_modules_tcpproxy prosody_modules_throttle_presence prosody_modules_twitter prosody_modules_vjud prosody_modules_webpresence prosody_modules_websocket
+prosody_modules_addressing prosody_modules_admin_web prosody_modules_archive prosody_modules_archive_muc prosody_modules_auth_dovecot prosody_modules_auth_external prosody_modules_auth_internal_yubikey prosody_modules_auth_joomla prosody_modules_auth_ldap prosody_modules_auth_phpbb3 prosody_modules_auth_sql prosody_modules_auth_wordpress prosody_modules_auto_accept_subscriptions prosody_modules_blocking prosody_modules_c2s_conn_throttle prosody_modules_carbons prosody_modules_checkcerts prosody_modules_client_certs prosody_modules_compat_bind prosody_modules_compat_muc_admin prosody_modules_compat_vcard prosody_modules_component_roundrobin prosody_modules_conformance_restricted prosody_modules_couchdb prosody_modules_data_access prosody_modules_default_bookmarks prosody_modules_default_vcard prosody_modules_discoitems prosody_modules_extdisco prosody_modules_flash_policy prosody_modules_group_bookmarks prosody_modules_host_guard prosody_modules_http_favicon prosody_modules_inotify_reload prosody_modules_ipcheck prosody_modules_json_streams prosody_modules_lastlog prosody_modules_latex prosody_modules_limits prosody_modules_log_auth prosody_modules_mam prosody_modules_mam_adhoc prosody_modules_motd_sequential prosody_modules_muc_intercom prosody_modules_muc_limits prosody_modules_muc_log prosody_modules_muc_log_http prosody_modules_offline_email prosody_modules_onhold prosody_modules_openid prosody_modules_pastebin prosody_modules_post_msg prosody_modules_pubsub_feeds prosody_modules_pubsub_hub prosody_modules_readonly prosody_modules_register_json prosody_modules_register_redirect prosody_modules_register_web prosody_modules_reload_modules prosody_modules_remote_roster prosody_modules_roster_command prosody_modules_s2s_idle_timeout prosody_modules_s2s_never_encrypt_blacklist prosody_modules_s2s_reload_newcomponent prosody_modules_saslauth_muc prosody_modules_seclabels prosody_modules_server_contact_info prosody_modules_server_status prosody_modules_service_directories prosody_modules_sift prosody_modules_smacks prosody_modules_sms_clickatell prosody_modules_srvinjection prosody_modules_stanza_counter prosody_modules_storage_mongodb prosody_modules_streamstats prosody_modules_support_contact prosody_modules_swedishchef prosody_modules_tcpproxy prosody_modules_throttle_presence prosody_modules_twitter prosody_modules_vjud prosody_modules_webpresence prosody_modules_websocket
 
 
 
