@@ -8,4 +8,4 @@ LICENSE=MIT
 RDEPEND=virtual/lua net-im/jabber-base luajit? ( dev-lang/luajit:2 ) >=net-dns/libidn-1.1 >=dev-libs/openssl-0.9.8 dev-lua/luasocket ipv6? ( =dev-lua/luasocket-9999 ) ssl? ( dev-lua/luasec ) dev-lua/luaexpat dev-lua/luafilesystem mysql? ( >=dev-lua/luadbi-0.5[mysql] ) postgres? ( >=dev-lua/luadbi-0.5[postgres] ) sqlite? ( >=dev-lua/luadbi-0.5[sqlite] ) libevent? ( dev-lua/luaevent ) zlib? ( dev-lua/lua-zlib )
 SLOT=0
 _eclasses_=eutils	327b713e2d6949c42cd96bc4898fd280	mercurial	add64e64d758a9618d46a08a95f77483	multilib	5782800349f728f725f9378105c6a2ab	toolchain-funcs	d3b5812eeab360bc41aa48b6cdbbc142	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	6601b4c5b3f019a993db59a50e1854e4
-_md5_=e820833e0f7a1c4381797121b230a03d
+_md5_=bca4a99e8e7d967d50082d349c7091bb
