@@ -1,0 +1,10 @@
+# ChangeLog for dev-lua/lua-geoip
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: $
+
+*lua-geoip-9999 (05 Aug 2012)
+
+  05 Aug 2012; Vadim A. Misbakh-Soloviov <mva@mva.name>
+  +lua-geoip-9999.ebuild, +metadata.xml:
+  dev-lua/lua-geoip
+
