@@ -2,6 +2,14 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  04 Aug 2012; Vadim A. Misbakh-Soloviov <mva@mva.name>
+  prosody-modules-9999.ebuild:
+  prosody-modules: removing broken modules
+
+  04 Aug 2012; Vadim A. Misbakh-Soloviov <mva@mva.name>
+  prosody-modules-9999.ebuild:
+  prosody modules bump
+
   27 Jul 2012; Vadim A. Misbakh-Soloviov <mva@mva.name>
   prosody-modules-9999.ebuild:
   Prosody-modules bump
